--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <nav>
                     <ul class="nav">
                         <li class="nav-item">
-                            Для мужчин
+                            Мужчины
                         </li>
                         <li class="nav-item">
-                            Для женщин
+                            Женщины
                         </li>
                         <li class="nav-item">
-                            Для детей
+                            Дети
                         </li>
                     </ul>
                 </nav>
